[package]
name = "kaze-sim-tests"
version = "0.1.0"
authors = ["Jake \"ferris\" Taylor <yupferris@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { path = "../kaze" }

[dependencies]
kaze = { path = "../kaze" }
