[package]
name = "kaze"
version = "0.1.0" # Must be kept up-to-date with html_root_url in lib.rs
authors = ["Jake \"ferris\" Taylor <yupferris@gmail.com>"]
edition = "2018"
description = "An HDL embedded in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yupferris/kaze"
readme = "../README.md"
keywords = ["hdl"]
categories = ["development-tools", "emulators", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.0"
